--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,29 @@
 <resources>
-    <string name="app_name">Everyday</string>
+    <!--Infos-->
+    <string name="app_name">EveryDay WIP KOTLIN</string>
+    <string name="app_version">Version 0.4</string>
+
+    <!-- GENERIC STRINGS -->
+    <string name="generic_string_NO" translatable="true">Non</string>
+    <string name="generic_string_YES" translatable="true">Oui</string>
+    <string name="generic_string_VALIDATE" translatable="true">Valider</string>
+    <string name="generic_string_BACK" translatable="true">Retour</string>
+    <string name="generic_string_CANCEL" translatable="true">Annuler</string>
+    <string name="generic_string_OK" translatable="true">OK</string>
+    <string name="generic_string_CLOSE" translatable="true">Fermer</string>
+    <string name="generic_string_HOURS" translatable="true">Heure(s)</string>
+    <string name="generic_string_SHORT_HOURS" translatable="true">h</string>
+    <string name="generic_string_MINUTES" translatable="true">Minute(s)</string>
+    <string name="generic_string_SHORT_MINUTES" translatable="true">mn</string>
+    <string name="generic_string_SECONDS" translatable="true">Seconde(s)</string>
+    <string name="generic_string_SHORT_SECONDS" translatable="true">s</string>
+    <string name="generic_string_WARNING" translatable="true">Attention</string>
+    <string name="generic_string_SHARE" translatable="true">Partager</string>
+    <string name="generic_string_EDIT" translatable="true">Modifier</string>
+    <string name="generic_string_DELETE" translatable="true">Supprimer</string>
+    <string name="generic_string_ERROR" translatable="true">Erreur</string>
+    <string name="generic_string_OPEN_SETTING" translatable="true">Ouvrir le réglage</string>
+    <string name="generic_string_CONTINUE" translatable="true">Continuer</string>
+    <string name="generic_string_PASS" translatable="true">Passer</string>
+
 </resources>
