--- a/locale/src/main/AndroidManifest.xml
+++ b/locale/src/main/AndroidManifest.xml
@@ -1,3 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="fr.shining_cat.everyday.locale">
-</manifest>
+<manifest package="fr.shining_cat.everyday.locale"></manifest>
