--- a/commons/src/main/res/values/strings.xml
+++ b/commons/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="generic_string_CONTINUE" translatable="true">Continuer</string>
     <string name="generic_string_PASS" translatable="true">Passer</string>
 
+    <string name="notificationsPreferences_notification_text_default_text">C\'est l\'heure de pratiquer!</string>
 </resources>
