--- a/screens/src/main/res/values-en/strings.xml
+++ b/screens/src/main/res/values-en/strings.xml
@@ -17,9 +17,9 @@
 
 <resources>
     <string name="title_about">About</string>
-    <string name="title_settings" translatable="false">Settings</string>
-    <string name="title_home" translatable="false">Home</string>
-    <string name="title_sessions" translatable="false">Sessions</string>
+    <string name="title_settings" translatable="true">Settings</string>
+    <string name="title_home" translatable="true">Home</string>
+    <string name="title_sessions" translatable="true">Sessions</string>
     <string name="title_statistics">Statistics</string>
     <string name="title_rewards">Rewards</string>
     <string name="app_made_by">Design and development:</string>
@@ -29,6 +29,19 @@
     <string name="title_sessions_calendar">Calendar</string>
     <string name="title_sessions_list">List</string>
     <string name="content_description_add_new_preset">Add new session preset button</string>
-    <string name="about_dialog_title">À propos</string>
     <string name="content_description_kiwi_logo">kiwi logo</string>
+    <string name="session_preset_creation_dialog_title">Creation</string>
+    <string name="session_preset_edition_dialog_title">Preset Edition</string>>
+    <string name="session_preset_audio_edit_dialog_title">Audio Session Edition</string>
+    <string name="duration">Duration</string>
+    <string name="countdown">Countdown length</string>
+    <string name="start_end_sound">Starting and ending sound</string>
+    <string name="interval">Interval</string>
+    <string name="vibration">Vibration</string>
+    <string name="interval_sound">Interval sound</string>
+    <string name="audio_guide">Audio Guide</string>
+    <string name="no_session_preset_found">No preset found, create a new one!</string>
+    <string name="session_duration_explanation">pour une session audio, la durée sera celle du fichier choisi</string>
+    <string name="session_countdown_explanation">longueur du compte à rebours avant le démarrage</string>
+    <string name="session_interval_explanation">Définir un intervalle auquel un son sera joué</string>
 </resources>
