--- a/commons/src/main/res/values/strings.xml
+++ b/commons/src/main/res/values/strings.xml
@@ -56,7 +56,7 @@
     <string name="content_description_validate_dialog" translatable="true">bouton validation</string>
     <string name="generic_EMPTY_LIST" translatable="true">Liste vide…</string>
     <string name="generic_NO_SELECTION">Aucune sélection</string>
-    <string name="unknown_audio_file">Fichier audio inconnu</string>
+    <string name="unknown_title">Titre inconnu</string>
     <string name="unknown_artist">Artiste inconnu</string>
     <string name="unknown_album">Album inconnu</string>
 </resources>
