refactored dimensions wqith clearer names for margins values fixed some formatting/clean code issues refactor tasks in gradles updated dependencies

--- a/commons/src/main/res/values/strings.xml
+++ b/commons/src/main/res/values/strings.xml
@@ -47,8 +47,8 @@
     <string name="generic_string_PASS" translatable="true">Passer</string>
     <string name="generic_string_NONE" translatable="true">Aucun</string>
 
-    <string name="hms_duration_format_short" translatable="true">%02dh %02dmn %02ds</string>
-    <string name="ms_duration_format_short" translatable="true">%02dmn %02ds</string>
+    <string name="hms_duration_format_short" translatable="true">%1$02dh %2$02dmn %3$02ds</string>
+    <string name="ms_duration_format_short" translatable="true">%1$02dmn %2$02ds</string>
     <string name="s_duration_format_short" translatable="true">%02ds</string>
 
     <string name="notificationsPreferences_notification_text_default_text" translatable="true">C\'est l\'heure de pratiquer!</string>
