--- a/screens/src/main/res/values/strings.xml
+++ b/screens/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
     <string name="audio_session_preset_title">Démarrer une session audio:</string>
     <string name="timed_session_preset_title">Démarrer une session chronométrée</string>
     <string name="unknown_audio_duration_fill_manually">durée inconnue, renseigner manuellement la durée du fichier audio sélectionnée</string>
-    <string name="audio_file_display_info">%s - %s - %s</string>
+    <string name="audio_file_display_info">%1$s - %2$s - %3$s</string>
     <string name="session_preset_invalid_preset">Le preset est invalide, corriger les champs indiqués</string>
 
 
