--- a/screens/src/main/res/values-en/strings.xml
+++ b/screens/src/main/res/values-en/strings.xml
@@ -52,4 +52,8 @@
     <string name="unknown_audio_duration_fill_manually">unknown duration, please input selected audio file duration manually</string>
     <string name="audio_file_display_info">%1$s - %2$s - %3$s</string>
     <string name="session_preset_invalid_preset">Le preset est invalide, corriger les champs indiqués</string>
+    <string name="free_timed_session">Session chronométrée libre</string>
+    <string name="timed_session">Session minutée</string>
+    <string name="audio_session">Session audio fixe</string>
+    <string name="free_audio_session">Session audio libre</string>
 </resources>
