--- a/screens/src/main/res/values/strings.xml
+++ b/screens/src/main/res/values/strings.xml
@@ -48,6 +48,7 @@
     <string name="countdown">Compte à rebours</string>
     <string name="start_end_sound">Son de début et fin</string>
     <string name="interval">Intervalle</string>
+    <string name="interval_random">Intervalle irrégulier aléatoire</string>
     <string name="vibration">Vibration</string>
     <string name="interval_sound">Son d\'intervalle</string>
     <string name="audio_guide">Support Audio</string>
@@ -65,6 +66,8 @@
     <string name="timed_session">Session minutée</string>
     <string name="audio_session">Session audio fixe</string>
     <string name="free_audio_session">Session audio libre</string>
+    <string name="session_preset_audio_free_explanation">Avec ce preset, sélectionnez un fichier audio d\'accompagnement à chaque lancement</string>
+    <string name="session_preset_timed_free_explanation">Avec ce preset, chronométrez une session sans durée prédéfinie</string>
 
 
 </resources>
