--- a/screens/src/main/res/values/strings.xml
+++ b/screens/src/main/res/values/strings.xml
@@ -49,17 +49,18 @@
     <string name="start_end_sound">Son de début et fin</string>
     <string name="interval">Intervalle</string>
     <string name="interval_random">Intervalle irrégulier aléatoire</string>
+    <string name="interval_random_explanation">Désactiver Intervalle irrégulier pour choisir un intervalle fixe</string>
     <string name="vibration">Vibration</string>
     <string name="interval_sound">Son d\'intervalle</string>
     <string name="audio_guide">Support Audio</string>
     <string name="no_session_preset_found">Aucun preset trouvé, créez-en un nouveau!</string>
-    <string name="session_duration_vs_audio_explanation">pour une session audio, la durée sera celle du fichier choisi.\nUne session Audio ne peut être transformée en session chronométrée</string>
+    <string name="session_duration_vs_audio_explanation">pour une session audio, la durée sera celle du fichier choisi.</string>
     <string name="session_interval_vs_audio_explanation">pour une session audio, il n\y aura pas d\'intervalles intermédiaires</string>
     <string name="session_countdown_explanation">longueur du compte à rebours avant le démarrage</string>
     <string name="session_interval_explanation">Intervalle auquel un son sera joué, choisir 0 pour aucun</string>
     <string name="audio_session_preset_title">Démarrer une session audio:</string>
     <string name="timed_session_preset_title">Démarrer une session chronométrée</string>
-    <string name="unknown_audio_duration_fill_manually">durée inconnue, renseigner manuellement la durée du fichier audio sélectionnée</string>
+    <string name="unknown_audio_duration_fill_manually">durée inconnue, renseigner manuellement la durée du fichier audio sélectionné</string>
     <string name="audio_file_display_info">%1$s - %2$s - %3$s</string>
     <string name="session_preset_invalid_preset">Le preset est invalide, corriger les champs indiqués</string>
     <string name="free_timed_session">Session chronométrée libre</string>
