--- a/screens/src/main/res/values-en/strings.xml
+++ b/screens/src/main/res/values-en/strings.xml
@@ -48,7 +48,7 @@
     <string name="content_description_add_new_preset">Add new session preset button</string>
     <string name="content_description_kiwi_logo">kiwi logo</string>
     <string name="audio_session_preset_title">Start audio session:</string>
-    <string name="timed_session_preset_title">Start timed session:</string>
+    <string name="timed_session_preset_title">Start timed-down session:</string>
     <string name="unknown_audio_duration_fill_manually">unknown duration, please input selected audio file duration manually</string>
     <string name="audio_file_display_info">%1$s - %2$s - %3$s</string>
     <string name="session_preset_invalid_preset">Le preset est invalide, corriger les champs indiqués</string>
@@ -60,4 +60,5 @@
     <string name="session_preset_timed_free_explanation">With this preset start a free timed session with no predefined duration</string>
     <string name="interval_random">Irregular random interval</string>
     <string name="interval_random_explanation">Uncheck Random Interval to select a fixed interval</string>
+    <string name="timed_free_session_preset_title">Start timed-up session:</string>
 </resources>
