--- a/screens/src/main/res/values/strings.xml
+++ b/screens/src/main/res/values/strings.xml
@@ -59,8 +59,9 @@
     <string name="session_countdown_explanation">longueur du compte à rebours avant le démarrage</string>
     <string name="session_interval_explanation">Intervalle auquel un son sera joué, choisir 0 pour aucun</string>
     <string name="audio_session_preset_title">Démarrer une session audio:</string>
-    <string name="timed_free_session_preset_title">Démarrer une session chronométrée</string>
+    <string name="audio_free_session_preset_title">Choisir un accompagnement audio pour une session libre…</string>
     <string name="timed_session_preset_title">Démarrer une session minutée</string>
+    <string name="timed_free_session_preset_title">Démarrer une session chronométrée</string>
     <string name="unknown_audio_duration_fill_manually">durée inconnue, renseigner manuellement la durée du fichier audio sélectionné</string>
     <string name="audio_file_display_info">%1$s - %2$s - %3$s</string>
     <string name="session_preset_invalid_preset">Le preset est invalide, corriger les champs indiqués</string>
